--- a/css/style.css
+++ b/css/style.css
@@ -19598,8 +19598,13 @@ label {
 }
 
 .profile-img {
-  width: 100%;
-  height: 300px;
+  width: 250px;
+  height: 250px;
   object-fit: cover;
+}
+
+.advert-img {
+  width: 100%;
+  object-fit: contain;
 }
 /*# sourceMappingURL=style.css.map */
