--- a/css/style.css
+++ b/css/style.css
@@ -19465,7 +19465,7 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
 
 /* Media Player CSS */
 
-.music-container {
+/* .music-container {
   background-color: #fff;
   border-radius: 15px;
   box-shadow: 0 20px 20px 0 rgba(252, 169, 169, 0.6);
@@ -19583,7 +19583,7 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
   height: 100%;
   width: 0%;
   transition: width 0.1s linear;
-}
+} */
 p {
   color: #111;
 }
