--- a/music.css
+++ b/music.css
@@ -207,7 +207,8 @@
   margin: 10px 0;
   max-height: 260px;
   overflow: auto;
-  padding: 0 50px;
+  padding: 0 20px;
+  font-size: 18px;
 }
 .music-list ul::-webkit-scrollbar{
   width: 0px;
